# AasenScript

./: CMakeLists.txt  README.md  main.cpp  test.txt
enums/: TokenEnum.h
lexer/: Lexer.cpp  Lexer.h
parser/: Expression.cpp  Expression.h  Parser.cpp  Parser.h  error.cpp  error.h
